# vcppake

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md
cmake/: UpdateSubmodules.cmake
inc/: vcppake.h
module/: CMakeLists.txt
module/inc/: Prettier.h
module/src/: Prettier.cpp
module_ut/: CMakeLists.txt
module_ut/src/: PrettierTest.cpp
src/: main.cpp  vcppake.cpp
ut/: CMakeLists.txt
ut/src/: test.cpp
